--- a/portfolio/portfolio/architecture/index.html
+++ b/portfolio/portfolio/architecture/index.html
@@ -5,9 +5,7 @@
 		<meta http-equiv="refresh" content="0;url=/SalientTest/portfolio/architecture/">
 	</head>
 	<body>
-		<script type="text/javascript">
-			window.location = "/SalientTest/portfolio/architecture/";
-		</script>
+		<script type="text/javascript">window.location = "/SalientTest/portfolio/architecture/";</script>
 
 		<p>You are being redirected to <a href="/SalientTest/portfolio/architecture/">/SalientTest/portfolio/architecture/</a></p>
 	</body>
