Update index.html about

--- a/about/index.html
+++ b/about/index.html
@@ -471,15 +471,15 @@ body::-webkit-scrollbar-thumb {
 <form action="https://formspree.io/f/xjvnpgnj" method="POST">
   <label>
     Your email:
-    <input type="email" name="email">
+    <input type="email" name="email" required>
   </label>
 <label>
 Your Subject:
-<input type="text" name="Subject">
+<input type="text" name="Subject" required>
 </label>
   <label>
     Your message:
-    <textarea name="message"></textarea>
+    <textarea name="message" required></textarea>
   </label>
   <!-- your other form fields go here -->
   <button type="submit">Send</button>
